[gd_scene load_steps=3 format=3 uid="uid://c8u8pd5xfvt8y"]

[ext_resource type="PackedScene" uid="uid://c6u8pd5xfvt8w" path="res://src/levels/enemy_test_level.tscn" id="1_yjk2t"]
[ext_resource type="Script" path="res://src/main.gd" id="1_yjk2u"]

[node name="Main" type="Node"]
script = ExtResource("1_yjk2u")

[node name="EnemyTestLevel" parent="." instance=ExtResource("1_yjk2t")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -68.0
offset_right = 100.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Soulsborne Web Game"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
